# BouncingPlus

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.rc
assets/: explain_stuff_for_levels.txt  explain_stuff_for_weapons.txt
assets/maps/: LevelOrder.txt
assets/maps/Blocked in/: entities.csv  map_data.csv  metadata.json
assets/maps/Bullet Hell/: metadata.json
assets/maps/Free/: entities.csv  map_data.csv  metadata.json
assets/maps/Infinite/: map_data.csv  metadata.json
assets/maps/Openfield/: metadata.json
assets/maps/Schizo/: entities.csv  map_data.csv  metadata.json
assets/maps/The Base/: entities.csv  map_data.csv  metadata.json
assets/maps/The Robots/: metadata.json
assets/maps/Waves/: entities.csv  map_data.csv  metadata.json
assets/maps/debug/: entities.csv  map_data.csv  metadata.json
assets/shaders/: main_game.glsl  weps_outline.glsl
assets/weapondata/: Beeg Sword.json  Charger.json  Default Gun.json  Enemy Shotgun.json  Enemy Sword.json  Fire Shotgun.json  Player Gun.json  Shotgun.json  Sniper.json  Spear.json  Sword.json  Virtue Sword.json
entities/: Entity.cpp
entities/subentities/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h  PlayerLogicProcessor.cpp  PlayerLogicProcessor.h  Spawner.cpp  Turret.cpp  Turret.h
entities/subentities/behaviors/: BehaviorType.h  DwellerBehavior.cpp
entities/subentities/enemy/: Enemy.cpp  Enemy.h
entities/subentities/enemy/behaviors/: CatchBehavior.cpp  CatchBehavior.h  DwellerBehavior.h  EnemyBehavior.cpp  WeaponBehavior.cpp  WeaponBehavior.h
entities/subentities/player/: Player.cpp  PlayerLogicProcessor.cpp  PlayerLogicProcessor.h
entities/subentities/projectile/: Bullet.cpp  Bullet.h
entities/subentities/stationary/: Spawner.cpp  Spawner.h  Turret.cpp  Turret.h  UpgradeStation.cpp
entities/systems/: Effects.cpp  Effects.h  Powerups.cpp  Powerups.h  Weapons.cpp  Weapons.h
game/: Game.cpp  Game.h
game/core/: SharedManager.cpp  SharedManager.h
game/managers/: CameraManager.cpp  CameraManager.h  EntityManager.cpp  GameModeManager.cpp  GameModeManager.h  ParticleManager.cpp  ResourceManager.cpp  SoundManager.cpp
game/ui/: Menu.cpp  Menu.h  UIManager.cpp  UIManager.h  UIUtils.cpp  UIUtils.h
level/: LevelLoader.cpp  TileManager.cpp  TileManager.h
level/tiles/: TileManagerRendering.cpp  TileType.h
pyscripts/: create_exe.py  grab.py  map_maker.py  noise_tex.py  web_compile.bat
pyscripts/tiled/: HARD.tmj  HARD_LVLV.tmx  aarushlvl.tmx  boss_lvl.tmj  experimental.tmj  lesbian_boykisser.txt  tut_level.tmx  untitled.tmj  untitled.tmx
pyscripts/tiled/tileset/: bouncingplus_tileset.tsx
src/: firebase_keys.h  globals.h  main.cpp
src/data/: Leaderboard.cpp  Leaderboard.h  Progress.cpp  Progress.h  SaveConverter.cpp  SaveConverter.h
src/data/keys/: firebase_keys.h
src/entities/: Entity.cpp  Entity.h  EntityType.h
src/entities/subentities/enemy/: Enemy.cpp  Enemy.h
src/entities/subentities/enemy/behaviors/: BehaviorType.h  CatchBehavior.cpp  CatchBehavior.h  DwellerBehavior.cpp  DwellerBehavior.h  EnemyBehavior.cpp  EnemyBehavior.h  EnemyBehaviorType.h  WeaponBehavior.cpp  WeaponBehavior.h
src/entities/subentities/player/: Player.cpp  Player.h  PlayerLogicProcessor.cpp  PlayerLogicProcessor.h
src/entities/subentities/projectile/: Bullet.cpp  Bullet.h  Throwable.cpp  Throwable.h
src/entities/subentities/stationary/: Spawner.cpp  Spawner.h  Turret.cpp  Turret.h  UpgradeStation.cpp  UpgradeStation.h
src/entities/systems/: Effects.cpp  Effects.h  Powerups.cpp  Powerups.h  Weapons.cpp  Weapons.h
src/game/: Game.cpp  Game.h
src/game/core/: BaseProfiler.cpp  BaseProfiler.h  Controls.cpp  Controls.h  GameMisc.cpp  GameMisc.h  Profiler.cpp  Profiler.h  SharedManager.cpp  SharedManager.h
src/game/managers/: CameraManager.cpp  CameraManager.h  EntityManager.cpp  EntityManager.h  GameModeManager.cpp  GameModeManager.h  ParticleManager.cpp  ParticleManager.h  ResourceManager.cpp  ResourceManager.h  SoundManager.cpp  SoundManager.h
src/game/ui/: Menu.cpp  Menu.h  UIManager.cpp  UIManager.h  UIUtils.cpp  UIUtils.h
src/game/ui/gameplay_ui/: GameplayUI.cpp  GameplayUI.h  GameplayUIHeavy.cpp  GameplayUIMenus.cpp  GameplayUIMeters.cpp
src/level/: LevelLoader.cpp  LevelLoader.h
src/level/tiles/: TileManager.cpp  TileManager.h  TileManagerFileRead.cpp  TileManagerRendering.cpp  TileType.h
tiled/: f.tmj
