cmake_minimum_required(VERSION 4.0)
project(BouncingPlus)
set(CMAKE_CXX_STANDARD 20)
find_package(raylib CONFIG REQUIRED)
find_package(nlohmann_json CONFIG REQUIRED)
add_executable(BouncingPlus entities/Entity.cpp entities/subentities/behaviors/CatchBehavior.cpp entities/subentities/behaviors/EnemyBehavior.cpp entities/subentities/behaviors/WeaponBehavior.cpp entities/subentities/Bullet.cpp entities/subentities/Enemy.cpp entities/subentities/Player.cpp entities/subentities/PlayerLogicProcessor.cpp entities/subentities/Spawner.cpp entities/subentities/Throwable.cpp entities/subentities/Turret.cpp entities/subentities/UpgradeStation.cpp entities/systems/Effects.cpp entities/systems/Powerups.cpp entities/systems/Weapons.cpp game/core/Controls.cpp game/core/Profiler.cpp game/core/SharedManager.cpp game/Game.cpp game/managers/CameraManager.cpp game/managers/EntityManager.cpp game/managers/GameModeManager.cpp game/managers/ParticleManager.cpp game/managers/ResourceManager.cpp game/managers/SoundManager.cpp game/ui/Menu.cpp game/ui/UIManager.cpp game/ui/UIUtils.cpp level/LevelLoader.cpp level/TileManager.cpp main.cpp)
target_link_libraries(BouncingPlus PRIVATE raylib)
target_link_libraries(BouncingPlus PRIVATE nlohmann_json)